--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
         <item>30</item>
         <item>60</item>
         <item>90</item>
-        <item>120</item>
+        <item>"All"</item>
     </string-array>
 </resources>
